Fixed z-index for map attribution

--- a/dashboard/www/style/menu.css
+++ b/dashboard/www/style/menu.css
@@ -67,7 +67,7 @@
 } 
 #menu li:hover ul {                     /* activates & makes visible the menu dropdown */
   display: block;
-  z-index: 1000;
+  z-index: 10000;
 }
 #menu .dropdown {                        
   /*background:red;*/
